test/spec_vectors/func/fail/module_20.wat
(module (func $type-local-num-vs-num (local f64 i64) (f64.neg (local.get 1))))